# rust_orm_test

./: Cargo.toml
migrations/2020-01-26-112434_create_table/: up.sql
src/: main.rs  models.rs  schema.rs
