[package]
name = "orm_test"
version = "0.1.0"
authors = ["Ali Rashidi <alirashidi127@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
failure = "0.1.6"
r2d2 = "0.8.8"
serde = "1.0.104"
serde_derive = "1.0.104"
diesel = { version = "^1.1.0", features = ["sqlite", "r2d2"] }
uuid = { version = "0.5", features = ["serde", "v4"] }
log = "0.4.8"
env_logger = "0.7.1"
